--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ java {
 }
 
 application {
-    mainModule = 'oinarria' // name defined in module-info.java
+    mainModule = 'labirintoa' // name defined in module-info.java
     mainClass = 'ehu.isad.Main'
 }
 
@@ -70,6 +70,8 @@ jlink {
 
     jpackage {
         if (org.gradle.internal.os.OperatingSystem.current().windows) {
+            installerType = "exe"
+            jPackageHome = "c:\\Program Files\\Java\\jdk-14.0.2"
             installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
         }
     }
