--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,8 @@ run {
     }
 }
 
+ext.os = org.gradle.internal.os.OperatingSystem.current()
+
 jlink {
 
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
@@ -69,10 +71,19 @@ jlink {
     }
 
     jpackage {
-        if (org.gradle.internal.os.OperatingSystem.current().windows) {
+        if (os.windows) {
             installerType = "exe"
             jPackageHome = "c:\\Program Files\\Java\\jdk-14.0.2"
             installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
         }
+        else if (os.linux) {
+            installerType = "deb"
+            installerOptions += [
+                    '--linux-shortcut'
+            ]
+        }
+
+
+
     }
 }
