--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,10 +4,10 @@
 name: Java CI
 
 on:
-  push:
     # Sequence of patterns matched against refs/tags
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    push:
+      branches:
+        - master
 
 jobs:
   build:
