--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,6 +20,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up JDK 14.0.2
       uses: actions/setup-java@v1.4.2
+      env:
+        ACTIONS_ALLOW_UNSECURE_COMMANDS:'true'
       with:
         java-version: '14.0.2'
         java-package: jdk+fx
