--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,7 @@ jlink {
     jpackage {
         if (os.windows) {
             installerType = "exe"
-            jPackageHome = "c:\\Program Files\\Java\\jdk-14.0.2"
+            // jPackageHome = "c:\\Program Files\\Java\\jdk-14.0.2"
             installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
         }
         else if (os.linux) {
