--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -6,8 +6,10 @@ name: Java CI
 on:
     # Sequence of patterns matched against refs/tags
     push:
-      branches:
-        - master
+      tags:
+        - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    #  branches:
+    #    - master
 
 jobs:
   build:
