--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ jlink {
 
     jpackage {
         if (os.windows) {
-            installerType = "exe"
+            installerType = "msi"
             // jPackageHome = "c:\\Program Files\\Java\\jdk-14.0.2"
             installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
         }
